--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <article class="text">
                     <h2>🙋🏻‍♂️Sobre mim</h2>
                     <p>
-                        Estudante de Analise e desenvolvimento de sistema altamente motivado em busca de uma oportunidade de estágio na area de programação.
+                        Estudante de Análise e desenvolvimento de sistema altamente motivado em busca de uma oportunidade de estágio na área de programação.
                     </p>
                     <p>
                         Possuo habilidades básicas, sou proativo, organizado e comprometido em 
